02-helm-chart.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
