03-autoscaling.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
