01-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: hello-world
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: adamgolab/hello-world
          ports:
            - name: web
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
  selector:
    app: hello-world
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - devjs.ml
    secretName: hello-world-nginx-cert
  rules:
  - host: devjs.ml
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: hello-world
          servicePort: 8000
